src/objects/ORS_Routing_Information__mdt.object
<CustomObject>
    <description>Stores ORS Office/Dept/Team for routing picklist values</description>
    <fields>
        <fullName>Advocate_Role__c</fullName>
        <label>Advocate Role</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>E&amp;I</fullName>
                </value>
                <value>
                    <fullName>E&amp;I Strategic Account Services</fullName>
                </value>
                <value>
                    <fullName>M&amp;R</fullName>
                </value>
                <value>
                    <fullName>M&amp;R Strategic Account Services</fullName>
                </value>
                <value>
                    <fullName>PHS</fullName>
                </value>
                <value>
                    <fullName>PHS Strategic Account Services</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department_API__c</fullName>
        <description>Stores the API value of Department</description>
        <label>Department API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>Stores the dropdown value of Department</description>
        <label>Department UI</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>E&amp;I</fullName>
                </value>
                <value>
                    <fullName>M&amp;R</fullName>
                </value>
                <value>
                    <fullName>PHS</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Office_API__c</fullName>
        <description>Stores the API value of Office</description>
        <label>Office API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <description>Stores the dropdown value of the Office</description>
        <label>Office UI</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>States record pertains to</description>
        <inlineHelpText>Enter states&apos; abbreviations comma separated</inlineHelpText>
        <label>State</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <label>Subtype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPSM__c</fullName>
        <label>TPSM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FALSE</fullName>
                    <default>true</default>
                    <label>FALSE</label>
                </value>
                <value>
                    <fullName>TRUE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_API__c</fullName>
        <description>Stores the API value of Team</description>
        <label>Team API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Quick_List__c</fullName>
        <label>Team Quick List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <description>Stores the dropdown value of the Team</description>
        <label>Team UI</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ORS Routing Information</label>
    <listViews>
        <fullName>Claims</fullName>
        <columns>MasterLabel</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Advocate_Role__c</columns>
        <columns>Topic__c</columns>
        <columns>Type__c</columns>
        <columns>Subtype__c</columns>
        <columns>Team_Quick_List__c</columns>
        <columns>Office__c</columns>
        <columns>Department__c</columns>
        <columns>Team__c</columns>
        <columns>Office_API__c</columns>
        <columns>Department_API__c</columns>
        <columns>Team_API__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Topic__c</field>
            <operation>equals</operation>
            <value>View Claims</value>
        </filters>
        <label>Claims</label>
    </listViews>
    <listViews>
        <fullName>SAE</fullName>
        <columns>MasterLabel</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Advocate_Role__c</columns>
        <columns>Topic__c</columns>
        <columns>Type__c</columns>
        <columns>Subtype__c</columns>
        <columns>Team_Quick_List__c</columns>
        <columns>Office__c</columns>
        <columns>Department__c</columns>
        <columns>Team__c</columns>
        <columns>Office_API__c</columns>
        <columns>Department_API__c</columns>
        <columns>Team_API__c</columns>
        <columns>Priority__c</columns>
        <columns>TPSM__c</columns>
        <filterScope>Everything</filterScope>
        <label>SAE</label>
    </listViews>
    <pluralLabel>ORS Routing Information</pluralLabel>
</CustomObject>